[project]
name = "editutils"
description = "A collection of utility nodes for advanced image editing in ComfyUI, supporting multiple AI models including Qwen and Flux2Klein."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/ComfyUI-EditUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "ComfyUI-EditUtils"
Icon = ""
